# Project-Euler-Haskell

./: .gitignore  CHANGELOG.md  Makefile  Project-Euler-Haskell.cabal  README.md  package.yaml  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
src/: Core.hs  Main.hs  Math.hs
src/Core/: Pointfree.hs
src/Data/: Grid.hs
src/Math/: Combinatorics.hs  NumberTheory.hs
src/Page01/: Problem01.hs  Problem02.hs  Problem03.hs  Problem04.hs  Problem05.hs  Problem06.hs  Problem07.hs  Problem08.hs  Problem09.hs  Problem10.hs  Problem11.hs  Problem12.hs  Problem13.hs  Problem14.hs  Problem15.hs  Problem16.hs  Problem17.hs  Problem18.hs  Problem19.hs  Problem20.hs
src/page_01/: Problem01.hs
test/: TestMain.hs
test/Tests/: Core.hs  Helpers.hs  Math.hs
test/Tests/Data/: Grid.hs
test/Tests/Math/: Combinatorics.hs  NumberTheory.hs
test/Tests/Page01/: Problem01.hs  Problem02.hs  Problem03.hs  Problem04.hs  Problem05.hs  Problem06.hs  Problem07.hs  Problem08.hs  Problem09.hs  Problem10.hs  Problem11.hs  Problem12.hs  Problem13.hs  Problem14.hs  Problem15.hs  Problem16.hs  Problem17.hs  Problem18.hs  Problem19.hs  Problem20.hs
