cabal-version:       >= 1.10
name:                Project-Euler-Haskell
version:             1.0.0.0
author:              Brian Cristante
maintainer:          33549821+brcrista@users.noreply.github.com
build-type:          Simple
extra-source-files:  README.md

executable Project-Euler-Haskell
  main-is:             Main.hs
  build-depends:       base >= 4.14 && < 4.15
  hs-source-dirs:      src
  other-modules:       Math.Combinatorics
                       Page01.Problem01
                       Page01.Problem02
  default-language:    Haskell2010

test-suite Project-Euler-Haskell-Tests
  type:           exitcode-stdio-1.0
  main-is:        TestMain.hs
  hs-source-dirs: src
  build-depends:  Project-Euler-Haskell,
                  HUnit