cabal-version:       >= 1.10
name:                Project-Euler-Haskell
version:             1.0.0.0
author:              Brian Cristante
maintainer:          33549821+brcrista@users.noreply.github.com
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.14 && < 4.15
  exposed-modules:     Math.Combinatorics
                       Page01.Problem01
                       Page01.Problem02

executable Project-Euler-Haskell
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.14 && < 4.15,
                       Project-Euler-Haskell
  hs-source-dirs:      app

test-suite Project-Euler-Haskell-Tests
  type:              exitcode-stdio-1.0
  main-is:           TestMain.hs
  default-language:  Haskell2010
  hs-source-dirs:    test
  build-depends:     base >= 4.14 && < 4.15,
                     Project-Euler-Haskell,
                     HUnit
  other-modules:     Tests.Page01.Problem01
                     Tests.Page01.Problem02